@@ -19,6 +19,7 @@ Features
    * Split locate_motion into separate 'mode' and 'style' option to allow all
      possible combinations. (Joerg Weber)
    * Get rid of ffmpeg-config in configure.in for debian. (Angel Carpintero)
+   * Implement 'gapless' event mode to allow for recording of movies without 'holes'. (Joerg Weber)
 
 Bugfixes
    * Fix Problem Encoding 1280x1024 resolution videos
